Mon Jul 29 16:22:16 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/orbsvcs/Naming/Storable_Naming_Context.cpp:

          fix for Bug 4118. The context held on to a lock too long
          and in certain situations this could cause a deadlock.

        * orbsvcs/tests/Bug_4118_Regression/run_test.pl:

          This is a test that verifies the fix is effective. The test
          should run quickly if all is well, but will fail with a timeout
          if the deadlock reappears.

        * bin/tao_other_tests.lst:

          Added new regression test to the list.

Wed Jul 24 14:55:23 UTC 2013  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be_include/be_visitor_operation/rettype_return_cs.h:
        * TAO_IDL/be_include/be_visitor_valuetype/field_cdr_cs.h:

          Fixed bad #ifndef include guards in source code. Thanks to
          Yogesh Sharma <Yogesh dot Sharma at saabsensis dot com> for
          reporting the bug and supplying a patch. Closes [BUGID:4117].

Mon Jul  1 16:50:09 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/orbsvcs/LoadBalancing/LB_Random.cpp:

          Fix error resulting from hasty commit.

Mon Jul  1 16:00:19 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/orbsvcs/LoadBalancing/LB_Random.cpp:

          Updated the algorithm used to select the next server, as I found the
          existing algorithm could possibly generate an out-of-bounds array
          index that would either cause the ASSERT to fail, or a failure
          elsewhere if the ASSERT were compiled out. The problem definitely
          appeared on 64-bit machines, when ACE_OS::rand() returned a value of
          RAND_MAX - 63 or higher. Also, since the function is selecting a
          random number, rather than having an ASSERT failure or other crash,
          it now just selects a new number if the one selected is out of
          bounds.
